# lifeGraph

./: .gitignore  README.md  memory_architecture.md  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  activity.py  auth.py  dependencies.py  health.py  insights.py  memory.py  onboarding.py  recommendations.py  summary.py  timeline.py
backend/app/auth/: __init__.py  google.py  security.py
backend/app/config/: __init__.py  constants.py  logging.py  settings.py
backend/app/database/: __init__.py  base.py  models.py  session.py
backend/app/graph/: __init__.py  builder.py  checkpointer.py  edges.py  state.py
backend/app/intelligence/: __init__.py  activity_service.py  base.py  behaviour_service.py  errors.py  evaluation_service.py  groq_client.py  insight_service.py  llm_client.py  memory_service.py  proposals.py  recommendation_service.py  reflection_service.py  summary_service.py
backend/app/models/: __init__.py  account.py  activity.py  base.py  behaviour.py  enums.py  insight.py  memory.py  recommendation.py  session.py  summary.py  timeline.py  user.py
backend/app/observability/: __init__.py
backend/app/prompts/: __init__.py  builder.py  definition.py  errors.py  registry.py
backend/app/repositories/: __init__.py  base.py  (+5 more)
backend/scripts/: reset_db.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_graph.py  test_health.py  test_intelligence.py  test_models.py  test_prompts.py  test_repositories.py  test_state.py
(+120 files in other folders)
