[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lifegraph"
version = "0.1.0"
description = "LifeGraph — AI-Powered Personal Intelligence Engine"
readme = "README.md"
requires-python = ">=3.12"

# Core runtime stack (docs/04_TECH_STACK.md). Phase 1 boots on the FastAPI +
# Pydantic subset; the LangGraph / Groq / SQLModel dependencies are declared
# here because they are the project's committed stack and are exercised from
# Phase 3 onward.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "sqlmodel>=0.0.21",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "groq>=0.11",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
